# head.hackage

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  all-cabal-hashes.nix  build.nix  default.nix  doctest.nix  ghc-prerelease.nix  ghc.nix  http-api-data.nix
patches/: Cabal-2.4.1.0.patch  EdisonAPI-1.3.1.patch  EdisonCore-1.3.2.1.patch  FontyFruity-0.5.3.4.patch  HTTP-4000.3.13.patch  HsOpenSSL-0.11.4.11.patch  HsYAML-0.1.1.3.patch  JuicyPixels-3.2.8.3.patch  JuicyPixels-3.2.9.1.patch  JuicyPixels-3.2.9.2.patch  JuicyPixels-3.2.9.3.patch  JuicyPixels-3.3.3.cabal  JuicyPixels-3.3.3.patch  List-0.6.0.patch  MemoTrie-0.6.8.patch  MissingH-1.4.0.1.cabal  OpenGL-3.0.2.2.patch  QuickCheck-2.12.6.1.cabal  QuickCheck-2.12.6.1.patch  QuickCheck-2.13.1.patch  STMonadTrans-0.4.3.cabal  STMonadTrans-0.4.3.patch  Unixutils-1.54.1.patch  Yampa-0.13.patch  accelerate-1.1.1.0.patch  accelerate-1.2.0.0.patch  accelerate-llvm-1.1.0.0.patch  accelerate-llvm-native-1.1.0.1.patch  acid-state-0.14.3.patch  adjunctions-4.4.patch  aeson-1.4.0.0.patch  aeson-1.4.2.0.cabal  aeson-1.4.3.0.patch  appar-0.1.7.patch  asn1-encoding-0.9.5.patch  attoparsec-0.13.2.2.cabal  attoparsec-0.13.2.2.patch  basement-0.0.10.cabal  basement-0.0.10.patch  basement-0.0.2.patch  (+322 more)
scripts/: README.md  build-all.nix  clean.sh  generate-nix-overrides.hs  head.hackage.sh  make-patch.sh  overrides.nix  patch-tool  summarize.py  travis.sh  unpack.sh
